--- a/KoloryWPF/MainWindow.xaml
+++ b/KoloryWPF/MainWindow.xaml
@@ -15,8 +15,15 @@
         <local:ColorToSolidColorBrushConverter x:Key="konwersjaColorBrush"/>
         <local:SkladoweRGBToSolidColorBrushConverter x:Key="konwersjaRGBBrush"/>
         <local:SkladoweRGBDoubleToSolidColorBrushConverter x:Key="konwersjaRGBDoubleBrush"/>
-
     </Window.Resources>
+    <Window.DataContext>
+        <vm:EdycjaKoloru/>
+    </Window.DataContext>
+    <Window.InputBindings>
+        <KeyBinding Key="R" Command="{Binding Resetuj}"/>
+        <KeyBinding Key="R" Modifiers="Ctrl" Command="{Binding Resetuj}"/>
+        <MouseBinding Gesture="Alt+MiddleClick" Command="{Binding Resetuj}"/>
+    </Window.InputBindings>
     <Grid DataContext="{StaticResource edycjaKoloru}">
         <Rectangle Margin="10,10,10,217" Stroke="Black" x:Name="rectangle">
             <Rectangle.Fill>
@@ -33,5 +40,8 @@
         <TextBlock Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,154" Text="{Binding ElementName=sliderG, Path=Value}"/>
         <Slider x:Name="sliderB" Margin="10,0,82,136" VerticalAlignment="Bottom" Maximum="255" Value="{Binding B, Mode=TwoWay, Converter={StaticResource konwersjaByteDouble}}"/>
         <TextBlock Height="22" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,132" Text="{Binding ElementName=sliderB, Path=Value}"/>
+        <Button Content="Resetuj" Height="25" Width="75" VerticalAlignment="Bottom" HorizontalAlignment="Left" Margin="10,0,0,10" 
+                Command="{Binding Resetuj}"/>
+
     </Grid>
 </Window>
