--- a/KoloryWPF/MainWindow.xaml
+++ b/KoloryWPF/MainWindow.xaml
@@ -7,9 +7,7 @@
         xmlns:local="clr-namespace:KoloryWPF"
         xmlns:vm="clr-namespace:KoloryWPF.ModelWidoku"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        KeyDown="Window_KeyDown"
-        >
+        Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
         <vm:EdycjaKoloru x:Key="edycjaKoloru"/>
         <local:ByteToDoubleConverter x:Key="konwersjaByteDouble"/>
@@ -23,6 +21,8 @@
     <Window.InputBindings>
         <KeyBinding Key="R" Command="{Binding Resetuj}"/>
         <KeyBinding Key="R" Modifiers="Ctrl" Command="{Binding Resetuj}"/>
+        <KeyBinding Key="Esc" Command="{Binding ZamknijOkno}" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
         <MouseBinding Gesture="Alt+MiddleClick" Command="{Binding Resetuj}"/>
     </Window.InputBindings>
     <i:Interaction.Triggers>
@@ -30,7 +30,7 @@
             <i:InvokeCommandAction Command="{Binding Zapisz}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
-    <Grid DataContext="{StaticResource edycjaKoloru}">
+    <Grid>
         <Rectangle Margin="10,10,10,217" Stroke="Black" x:Name="rectangle">
             <Rectangle.Fill>
                 <MultiBinding Mode="OneWay" Converter="{StaticResource konwersjaRGBDoubleBrush}">
